[package]
name = "bib"
version = "0.1.0"
authors = ["Joe Neeman <joeneeman@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common/" }

[dev-dependencies]
# There is a bug in tectonic's bibtex errors that is fixed in git.
tectonic = { git = "https://github.com/jneem/tectonic.git" }

