[package]
name = "tectonic_tester"
version = "0.1.0"
authors = ["Joe Neeman <joeneeman@gmail.com>"]
edition = "2018"

[dependencies]
# There is a bug in tectonic's bibtex errors that is fixed in git.
tectonic = { git = "https://github.com/tectonic-typesetting/tectonic.git" }
bib = { path = "../bib/" }

